# agentbay

./: .gitignore  AGENTS.md  Procfile  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.bak.20251018-102916  local.env.example  run-setup-as-user.sh  self_audit.sh  setup-bd.sh
.tmp_worker/: design.md  spec.txt
.tmp_worker_capture/: spec.txt
alembic/: env.py
alembic/versions/: 20240411_pty_conductor.py
app/: __init__.py  config.py  db.py  enums.py  main.py  models.py  schemas.py
app/api/: __init__.py  flows.py  tasks.py  workers.py
app/flows/: design_refinement.py
app/services/: __init__.py  pty_watcher.py  runtime.py  status_repo.py  task_runner.py  terminal_emulator.py  tmux.py  worker_manager.py
app/utils/: paths.py
design/: interactive_cli_control.md
design/classifier_packs/: codex.yml
scripts/: conductor.py  e2e_smoketest.py  interactive_codex_demo.py  keyenv
scripts/shims/: run_claude_task.sh  run_codex_task.sh  run_critic_task.sh  run_gemini_task.sh  tool_runner.py
tests/: test_terminal_emulator.py
